# HeWeb

./: HeWeb.py  pyproject.toml  readme.md  run_web.sh
data/: emotion_data.csv
logics/: emotion_data_management.py  request_test.py
pages/: Emotion Control.py  Emotion Data.py  Emotion_Control.py
