[project]
name = "hewo-web-controller"
version = "0.1.0"
description = "Streamlit interface for controlling HeWo's facial expressions and emotions"
authors = [
    { name = "Diego Delgado Chaves" }
]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "streamlit>=1.30.0",
    "pyyaml",
    "requests"
]

[tool.setuptools]
py-modules = []
